--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+<div style="background:#ffeeba;padding:10px;text-align:center;font-weight:bold;">
+⚠️ This website is best viewed on PC or Laptop for better experience.
+</div>
   <header>
     <div class="logo_container">
       <a href="#"><img class="Hackathon_Home" src="images/logo.png" alt="hackathon Home" /></a>
@@ -356,3 +359,4 @@
 </body>
 
 </html>
+
